# C-Project-network-simulator

./: CMakeLists.txt  README.md
libs/: readme.md
src/: CMakeLists.txt  analysis.cpp  analysis.hpp  chartwidget.cpp  chartwidget.hpp  end-host.cpp  end-host.hpp  exceptions.hpp  graph.cpp  graph.hpp  link.cpp  link.hpp  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.hpp  node.cpp  node.hpp  nodewidget.cpp  nodewidget.hpp  packet.cpp  packet.hpp
tests/: files.txt  test2.txt
